--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,6 @@
 * {
   /* overflow: hidden; */
-  box-sizing: content-box;
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
   font-family: 'Roboto', sans-serif;
@@ -27,7 +27,7 @@ img {
   width: 50vh;
   height: 45vh;
   opacity: 0.7;
-  border-radius: 200px;
+  border-radius: 9999px;
   z-index: 5;
   border: 5px solid black
 }
